# ChangeLog for sys-apps/texinfo
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/texinfo/ChangeLog,v 1.74 2006/07/20 00:44:18 vapier Exp $

*texinfo-4.8-r4 (20 Jul 2006)

  20 Jul 2006; Mike Frysinger <vapier@gentoo.org>
  +files/texinfo-4.8-bounds-check.patch, +texinfo-4.8-r4.ebuild:
  Grab fix from upstream cvs for out of bounds error #140902 by Alexey Dobriyan.

  23 May 2006; <solar@gentoo.org> -texinfo-4.7-r1.ebuild,
  -texinfo-4.8.ebuild, -texinfo-4.8-r1.ebuild:
  - removed obsolete vuln ebuilds

  22 May 2006; Danny van Dyk <kugelfang@gentoo.org> texinfo-4.8-r3.ebuild:
  Updated previous fix to use tc-is-cross-compiler.

  20 May 2006; <solar@gentoo.org> texinfo-4.8-r3.ebuild:
  - Cross-compile workaround #133429

  30 Mar 2006; Diego Pettenò <flameeyes@gentoo.org> texinfo-4.8-r3.ebuild:
  Add ~x86-fbsd keyword.

*texinfo-4.8-r3 (08 Feb 2006)

  08 Feb 2006; Mike Frysinger <vapier@gentoo.org>
  +files/texinfo-4.8-tempfile-owl.patch, +texinfo-4.8-r3.ebuild:
  Update tempfile patch #114499.

*texinfo-4.8-r2 (08 Oct 2005)

  08 Oct 2005; Mike Frysinger <vapier@gentoo.org>
  files/texinfo-4.8-tempfile.patch, +texinfo-4.8-r2.ebuild:
  Fix segfault in previous tempfile fix #108416.

*texinfo-4.8-r1 (29 Sep 2005)

  29 Sep 2005; Mike Frysinger <vapier@gentoo.org>
  +files/texinfo-4.8-tempfile.patch, +texinfo-4.8-r1.ebuild:
  Fix insecure tempfile usage #106105.

  17 Sep 2005; Ciaran McCreesh <ciaranm@gentoo.org> ChangeLog:
  Converted to UTF-8, fixed encoding screwups

  29 Jun 2005; Joshua Kinard <kumba@gentoo.org> texinfo-4.8.ebuild:
  Marked stable on mips.

  17 Jun 2005; Michael Hanselmann <hansmi@gentoo.org> texinfo-4.8.ebuild:
  Stable on ppc.

  13 May 2005; Mike Frysinger <vapier@gentoo.org>
  +files/texinfo-4.8-freebsd.patch, texinfo-4.8.ebuild:
  Add a FreeBSD compatibility patch by Diego Pettenò #92434.

  25 Apr 2005; Mike Frysinger <vapier@gentoo.org> texinfo-4.8.ebuild: