@@ -15,19 +15,18 @@ MD5 216cdeeac537b57cdb329003c3c46b3d files/texinfo-4.8-tempfile-owl.patch 2565
 RMD160 8b54cc3942b09c8fe0eb82523be57002bf04b2fe files/texinfo-4.8-tempfile-owl.patch 2565
 SHA256 f36057327c44b65e7349ccc6ffdd77588c62796047816062cc51dc4ef3791da4 files/texinfo-4.8-tempfile-owl.patch 2565
 DIST texinfo-4.8.tar.bz2 1521822 RMD160 5cb82cd240d1f22da813c7142df8828b4f6f1ea4 SHA1 b19e906f7220294c1e8b087d583c50f5c4d7c420 SHA256 f6bb61fb9c1d6a65523c786a4a74ab61e455420469e09a86929f2d403d9a21bb
-EBUILD texinfo-4.8-r4.ebuild 2163 RMD160 22cc263a909ca2dba7b720c4b996e013592d5a61 SHA1 3326a1eb53b7adc5318e6db8e9ad6fba034b0807 SHA256 cf420f97939abe3a352d38a9146a91e9dcb27d171c79f7d787e4cb20bbbb5268
-MD5 216866c4fd6c921a1063604a3bd5f16d texinfo-4.8-r4.ebuild 2163
-RMD160 22cc263a909ca2dba7b720c4b996e013592d5a61 texinfo-4.8-r4.ebuild 2163
-SHA256 cf420f97939abe3a352d38a9146a91e9dcb27d171c79f7d787e4cb20bbbb5268 texinfo-4.8-r4.ebuild 2163
-MISC ChangeLog 8559 RMD160 37def19ce2e1021eb218965999dc42611ec68643 SHA1 a245a430c67d9d981ac770ecc9d12a6ac8370b00 SHA256 3c240154e64b2e2f7bd0d81939821c8a99c224c863d1d9af4a685d4c12d806ed
-MD5 2bdbe157a99c9022aa2f0a0b5a454a53 ChangeLog 8559
-RMD160 37def19ce2e1021eb218965999dc42611ec68643 ChangeLog 8559
-SHA256 3c240154e64b2e2f7bd0d81939821c8a99c224c863d1d9af4a685d4c12d806ed ChangeLog 8559
+EBUILD texinfo-4.8-r4.ebuild 2165 RMD160 398fbb10202dfdeb1d25ae1ca455982c7450e29a SHA1 3f6be5222b12ad7d440bc1cd83a077873a4029ba SHA256 98c7c148015e81d390ea7197f07764226adaab45cb448f2a80c90898b6533930
+MD5 9a83399bf750b637f29baca06aa1db4b texinfo-4.8-r4.ebuild 2165
+RMD160 398fbb10202dfdeb1d25ae1ca455982c7450e29a texinfo-4.8-r4.ebuild 2165
+SHA256 98c7c148015e81d390ea7197f07764226adaab45cb448f2a80c90898b6533930 texinfo-4.8-r4.ebuild 2165
+MISC ChangeLog 8663 RMD160 5b609a99d92240456f7f78dc5eb19fc988c9eadb SHA1 cc664f31e25d1041f0adf1739a6852c3ae725ad3 SHA256 5f24a69f4efcef8174c380625bf3bfe2a59a9403a35dc4a39054487c3fd5d952
+MD5 941606e3f54744c2f72d23948ecd956f ChangeLog 8663
+RMD160 5b609a99d92240456f7f78dc5eb19fc988c9eadb ChangeLog 8663
+SHA256 5f24a69f4efcef8174c380625bf3bfe2a59a9403a35dc4a39054487c3fd5d952 ChangeLog 8663
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
 MD5 9a09f8d531c582e78977dbfd96edc1f2 metadata.xml 164
 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 metadata.xml 164
 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92 metadata.xml 164
-size 241 files/digest-texinfo-4.8-r4 241
+MD5 29bb9e8c5badabb1357af7f2e69f0f79 files/digest-texinfo-4.8-r4 241
 RMD160 854f817351e10a866caacd170b988b60c0538113 files/digest-texinfo-4.8-r4 241
 SHA256 75045d609cf165296a77fcee2f24f408b40d03462a18b787bf8334ee95b618d8 files/digest-texinfo-4.8-r4 241
-MD5 29bb9e8c5badabb1357af7f2e69f0f79 files/digest-texinfo-4.8-r4 241
